modicar indes desde main

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>curso intensivo</h1>
-    <p>quiero dinero, pero esta difil la cosas</p>
+    <h1>curso intensivo git</h1>
+    <p>a veces nos damos cuenta tarde de cosas, o es que el mundo te muestra que no te mereces mas que eso</p>
+    <li>
+        <li>elemto 1</li>
+        <li>elemto 2</li>
+        <li>elemto 3</li>
+        <li>elemto 4</li>
+    </li>
 </body>
 </html>
