modificar indes desde html

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
     <h1>curso intensivo</h1>
     <p>quiero dinero, pero esta difil la cosas</p>
 </body>
+<script src="dinami.js"></script>
 </html>
