--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>curso intensivo git</h1>
-    <p>a veces nos damos cuenta tarde de cosas, o es que el mundo te muestra que no te mereces mas que eso</p>
-    <li>
+    <h1>curso intensivo</h1>
+    <p>no se que sentir para ser algo para ti</p>
+    
+    <ol>
         <li>elemto 1</li>
         <li>elemto 2</li>
         <li>elemto 3</li>
         <li>elemto 4</li>
-    </li>
+        <li>elemto 5</li>
+    </ol>
 </body>
 <script src="dinami.js"></script>
 </html>
