segundo intento en conflicto

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <h1>curso intensivo</h1>
-    <p>no se que sentir para ser algo para ti</p>
+    <p>a veces no queremos algo porque no nos gusta, pero luego te das cuenta que es a lo unico que puedes aspirar</p>
     
-    <ol>
+    <ul>
         <li>elemto 1</li>
         <li>elemto 2</li>
         <li>elemto 3</li>
         <li>elemto 4</li>
         <li>elemto 5</li>
-    </ol>
+    </ul>
 </body>
 <script src="dinami.js"></script>
 </html>
