estaciones del año

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <li>elemto 4</li>
         <li>elemto 5</li>
     </ul>
+    
+    <h2>estaciones del año</h2>
+    <ol>
+        <li>verano</li>
+        <li>otoño</li>
+        <li>primavera</li>
+    </ol>
 </body>
 <script src="dinami.js"></script>
 </html>
