un nuevo dia aprendiendo git

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li>verano</li>
         <li>otoño</li>
         <li>primavera</li>
+        <li>invierno</li>
     </ol>
 </body>
 <script src="dinami.js"></script>
