poniendo bomito al html

--- a/index.html
+++ b/index.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>aprendiendo git & github</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>curso intensivo</h1>
-    <p>a veces no queremos algo porque no nos gusta, pero luego te das cuenta que es a lo unico que puedes aspirar</p>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>pagina con git</h1>
+    <p>
+      gh-pages es una rama especial para crear un sitio web a tu proyecto
+      alojado directamente en tu repositorio de GitHub.
+    </p>
     <ul>
-        <li>elemto 1</li>
-        <li>elemto 2</li>
-        <li>elemto 3</li>
-        <li>elemto 4</li>
-        <li>elemto 5</li>
+      <li>URL del repositorio: https://github.com/usuario/repositorio</li>
+      <li>URL del sitio: https://usuario.github.io/repositorio</li>
     </ul>
-    
-    <h2>estaciones del año</h2>
-    <ol>
-        <li>verano</li>
-        <li>otoño</li>
-        <li>primavera</li>
-        <li>invierno</li>
-    </ol>
-</body>
-<script src="dinami.js"></script>
+    <img src="../mircha-css&html/assets/cyber.jpeg" alt="cyberpunk" />
+  </body>
+  <script src="dinami.js"></script>
 </html>
