--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>prueba</h1>
+    <h1>prueba x</h1>
     <p>
       gh-pages es una rama especial para crear un sitio web a tu proyecto
       alojado directamente en tu repositorio de GitHub.
